# vault

./: .env  .gitignore  CLI_COMMANDS_REFERENCE.md  CLI_COMMANDS_REFERENCE_FR.md  Cargo.toml  EMBER_SETUP.md  ERDPS_COMMANDS_COMPLETE.md  ERDPS_FUNCTIONALITY_AUDIT_REPORT.md  ERDPS_Production_Readiness_Report.md  ERDPS_Sentinel.sys  KNOWN_ISSUES_AND_FIXES.md  NETWORK_MONITORING_SETUP.md  PRODUCTION_READINESS_REPORT.md  README.md  SCAN_COMMAND_AUDIT.md  SOC_DEPLOYMENT_READINESS.md  TESTING_VALIDATION_SCRIPTS.ps1  TESTS_FIXES_NEEDED.md  TOOLS_STATUS_ANALYSIS.md  baseline_config.toml  bitcoin_wallet_0f4c.docx  bitcoin_wallet_7744.kdbx  build.rs  check_errors.txt  check_errors_final.txt  check_errors_new.txt  check_output.txt  check_output2.txt  check_output3.txt  check_output4.txt  check_output5.txt  check_output_after_fix.txt  check_output_final.txt  check_output_latest.txt  check_output_new.txt  clippy_output.txt  compilation_errors.txt  compilation_errors_10.txt  compilation_errors_11.txt  compilation_errors_12.txt  (+93 more)
.cargo/: config.toml
.github/workflows/: ci.yml
agent/: build.rs  rule_metadata.db
agent/src/: bindings.rs  main.rs
benches/: ipc_benchmarks.rs
config/: agent.conf  agent.toml  safe_marker.txt  yara_config.json
docs/: detector_spec.md  ipc_signature_conformance.md  ipc_spec.md  mitigations_spec.md  monitoring_guide.md  privileged-ci-lane.md  yara_configuration.md
docs/simulators_analysis/: darkside.md  lockbit.md  notpetya.md  revil.md  wannacry.md
driver/: CMakeLists.txt  minifilter_entropy_update.cpp
driver/include/: shared_def.h
driver/sources/: minifilter.cpp
examples/: ml_threat_scoring_demo.rs
grafana/: erdps-agent-dashboard.json
migrations/: 001_production_metrics_schema.sql  002_ember_detection_schema.sql
models/: EMBER2024_Win32.model  EMBER2024_Win64.model
policies/: quarantine_policy.json
quarantine/1763200830-6b055f43-cc41-4eb2-9034-0a085d08dc00/: .manifest.json  README_RESTORE_FILES.meta.json  README_RESTORE_FILES.txt  document_1.cfg.meta.json  document_1.cfg.ransom_test
quarantine/1763769200-fa45a7a5-4354-4c62-bee6-110f13449557/: .manifest.json  fake_ransom.meta.json  fake_ransom.py
reports/: report_2026-02-20T20-55-57_760645700+00-00_MALICIOUS.html  report_2026-02-20T20-55-57_760645700+00-00_MALICIOUS.json
rules/: test_rules.yar
rules/local/: custom_test.yar
rules/veeam-ransomware/: rules.yar
rules/yaraify-rules/: BatModifier1.yar  BatModifier2.yar  Gh0st_PythonLoader.yar  MaksStealer_Loader.yar  OdysseyStealer.yar  OleTrojan.yar  StealcV2.yar  TH_Generic_MassHunt_Webshells_2025_CYFARE.yar  TH_Packed_Linux_ELF_AllPackers_2025_CYFARE.yar  apt36_android_caprarat_capratube_viber_2025.yar  apt36_win_elizarat_slackapi_2024.yar  botnet_plaintext_c2.yar  easyforme_infostealer.yar  mht_inside_word.yar  rules.yar
schemas/: yara_match_event.json
scripts/: build.ps1  build.sh  build_release_linux.sh  build_release_macos.sh  build_release_windows.ps1
src/: agent - Shortcut.lnk  behavior.rs  behavioral_engine.rs  canary_sentinel.rs  deception.rs  detector.rs  dfir_triage.rs  disassembly_engine.rs  dns_hunter.rs  drive_discovery.rs  entropy_engine.rs  event_log.rs  forensic_shell.rs  ghost_hunter.rs  graph_engine.rs  hook_hunter.rs  integrity_scanner.rs  intel_manager.rs  io_hunter.rs  kernel_bridge.rs  lib.rs  live_hunter.rs  local_cortex.rs  logger.rs  main.rs  memory_scanner.rs  mitigations.rs  ml_engine.rs  ml_ngram.rs  model_hashes.rs  network_scanner.rs  network_sentinel.rs  persistence_hunter.rs  persistence_scanner.rs  pickle_scanner.rs  pipeline.rs  recovery_engine.rs  registry_sentry.rs  reporter.rs  rootkit_hunter.rs  (+12 more)
src/active_defense/: honeypot.rs  honeypots.rs  mod.rs  process_freeze.rs  rollback.rs
src/ai/: analysis_pipeline.rs  mod.rs  model_manager.rs  ollama_client.rs
src/ai_copilot/: client.rs  forensics.rs  mod.rs  sentinel_brain.rs
src/api/: mod.rs  (+1 more)
test_honeyfiles/: bitcoin_wallet_c322.kdbx  budget_2024_63fc.xlsx  budget_2024_feef.txt  master_key_79be.kdbx  passwords_18ea.xlsx  passwords_559f.docx  passwords_68f3.docx  salary_list_3155.docx  salary_list_9873.xlsx  salary_list_a8a9.xlsx  salary_list_b18b.kdbx  salary_list_d26b.xlsx  salary_list_e2e9.kdbx  salary_list_ef27.kdbx
test_trigger_files/: test_file_10.txt  test_file_11.txt  test_file_12.txt  test_file_13.txt  test_file_14.txt  test_file_15.txt  test_file_16.txt  test_file_17.txt  test_file_18.txt  test_file_19.txt  test_file_20.txt  test_file_21.txt  test_file_22.txt  test_file_23.txt  test_file_24.txt  test_file_25.txt  test_file_26.txt  test_file_27.txt  test_file_28.txt  test_file_29.txt  test_file_3.txt  test_file_30.txt  test_file_31.txt  test_file_32.txt  test_file_33.txt  test_file_34.txt  test_file_35.txt  test_file_36.txt  test_file_37.txt  test_file_38.txt  test_file_39.txt  test_file_4.txt  test_file_40.txt  test_file_41.txt  test_file_42.txt  test_file_43.txt  test_file_44.txt  test_file_45.txt  test_file_46.txt  test_file_47.txt  (+18 more)
tests/: acceptance_tests.rs  advanced_features_tests.rs  autonomous_response_integration.rs  behavioral_performance_test.rs  category_scanner_tests.rs  comprehensive_agent_tests.rs  correlation_engine_tests.rs  detector_tests.rs  ember_response_tests.rs  enhanced_rules_tests.rs  enterprise_validation.rs  false_positive.rs  features.json  functional_yara_tests.rs  god_mode_verification.rs  http_smoke_tests.rs  integration_enterprise.rs  integration_tests.rs  integration_tests_new.rs  ipc_integration.rs  ipc_normalization_tests.rs  ipc_signature_vectors.rs  isolation_engine_tests.rs  json_reporting_test.rs  llm_disassembly_tests.rs  log_rotation_tests.rs  memory_forensics_performance_test.rs.disabled  mitigations_integration.rs  ml_threat_scoring_tests.rs.disabled  multi_layer_scanner_tests.rs  network_performance_validation.rs  optimization_integration_tests.rs  performance_gates_tests.rs  performance_monitor_tests.rs  phase2_integration_tests.rs  prometheus_e2e.rs  ransomware_integration_test.rs  rule_optimizer_tests.rs  rule_store_tests.rs  rules_testing_tests.rs  (+16 more)
yara_rules/: minimal_safe.yar
(+1118 files in other folders)
