[package]
name = "erdps-agent"
version = "0.1.0"
edition = "2021"
authors = ["ERDPS Team"]
description = "Enterprise Ransomware Detection and Protection System - Agent"
license = "MIT"
repository = "https://github.com/erdps/erdps"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[lints.rust]
warnings = "warn"
unused_variables = "warn"
dead_code = "allow"

[dependencies]
# Core async runtime and utilities
tokio = { version = "1.0", features = ["full", "tracing"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
rayon = "1.8"
twox-hash = "1.6"
log = "0.4"
flexi_logger = { version = "0.27", features = ["compress"] }
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Cryptography and security
aes-gcm = "0.10"
rand = "0.8"
console = "0.15"
colored = "2.0"
hmac = "0.12"
base64 = "0.21"
argon2 = { version = "0.5" }
ring = { version = "0.17" }
crc32fast = "1.3"
yara-x = "0.8.0"
capstone = "0.11"
iced-x86 = "1.21" # High-speed disassembly
petgraph = "0.6"
# unicorn-engine = "2.0.1" # Disabled due to build environment limitations
murmur3 = "0.5"
pnet = "0.34"
governor = "0.6"
hex = "0.4"
# md5 = "0.7"
sha2 = "0.10"
cross-authenticode = "0.2"
# colored = "2.0"
zeroize = "1.7"
bincode = "1.3"
chacha20poly1305 = "0.10"

# Rustls TLS implementation
rustls = "0.20"
tokio-rustls = "0.23"
rustls-native-certs = "0.7"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
rand_core = "0.6"

# GitHub API and HTTP client for YARA rule downloading
walkdir = "2.4"
# git2 = { version = "0.18", default-features = false, features = ["https"] }

# File system monitoring and utilities
winreg = "0.50" # For Registry Monitoring
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }
async-trait = "0.1.88"
lazy_static = "1.4"
memmap2 = "0.9"
rustyline = { version = "13.0", features = ["derive"] }
minidump = "0.20"

# Network and URL handling
ipnetwork = "0.20"
url = "2.4"
urlencoding = "2.1"

# ... existing ...
ollama-rs = { version = "0.1", features = ["stream"] }
ntapi = "0.4"
notify = "6.1"

# Windows-specific dependencies
winapi = { version = "0.3.9", features = ["processthreadsapi", "tlhelp32", "winnt", "handleapi", "winuser", "psapi", "winsvc", "winbase", "winreg", "evntprov", "sysinfoapi", "memoryapi", "minwindef", "ntdef", "errhandlingapi", "ioapiset", "winioctl"] }
windows-service = { version = "0.6", optional = true }

# Phase 2 ETW and Windows API dependencies
widestring = { version = "1.0", optional = true }

# Export functionality dependencies
printpdf = "0.3.2"
lettre = "0.10"
csv = "1.3"
image = "0.23"
quick-xml = { version = "0.31", features = ["serialize"] }
flate2 = "1.0"
zip = "0.6"

# Hashing and checksums
md5 = "0.7"
sha1 = "0.10"
# sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
regex = "1.10"


# Database and persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], default-features = false }
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
rocksdb = "0.21"

# Scheduling and task management
tokio-cron-scheduler = "0.10"

# HTTP client and networking
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "rustls-tls", "multipart"], default-features = false, optional = true }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["limit", "buffer", "timeout"] }
tower-http = { version = "0.5", features = ["limit", "request-id", "trace"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
# rustls-native-certs moved to main dependencies section

# Network monitoring
pcap = { version = "2.0", optional = true }
# pnet = { version = "0.35", optional = true }
dns-lookup = { version = "2.0", optional = true }
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime", "rustls"], optional = true }
x509-parser = { version = "0.15", optional = true }

# Multi-agent coordination (temporarily disabled)

# Retry mechanisms and resilience
backoff = "0.4"
tempfile = "3.8"

# Test dependencies
multer = "3.0"
bytes = "1.5"
pin-project = "1.1"
futures-util = "0.3"

# Testing framework dependencies
tokio-test = { version = "0.4", optional = true }
proptest = { version = "1.4", optional = true }
criterion = { version = "0.5", features = ["html_reports"], optional = true }
mockall = { version = "0.12", optional = true }
serial_test = { version = "3.0", optional = true }

# Configuration management
toml = "0.8"
ini = "1.3"
config = "0.14"

# YARA engine for malware detection

# Performance and concurrency
scopeguard = "1.2"
arc-swap = "1.6"
lru = "0.12"
num_cpus = "1.16"
once_cell = "1.19"
dashmap = "5.5"
core_affinity = "0.8"
crossbeam = { version = "0.8", optional = true }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
parking_lot = { version = "0.12", optional = true }
mimalloc = { version = "0.1", default-features = false }

# Lightning-fast performance optimization dependencies
smallvec = { version = "1.11", features = ["union", "const_generics"] }
compact_str = "0.7"
tokio-util = { version = "0.7", features = ["codec", "time"] }
bloom = "0.3"
ahash = "0.8"
fxhash = "0.2"
rustc-hash = "1.1"
bumpalo = "3.14"
slab = "0.4"

# Monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
console-subscriber = { version = "0.2", optional = true }
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Statistical analysis and entropy (keeping non-ML stats)
statrs = "0.16"
entropy = "0.4"
fastrand = "2.0"

# File analysis (keeping goblin for PE/ELF parsing)
goblin = { version = "0.7", optional = true }

# Validation and testing framework dependencies
digest = "0.10"
generic-array = "0.14"

# Message queues and communication
# kafka = { version = "0.10", optional = true }
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
# rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
lapin = { version = "2.5", optional = true }

# JSON Web Tokens and authentication
jsonwebtoken = "9.2"

# Process and system information
sysinfo = "0.30"
hostname = "0.4.1"
whoami = "1.4"
tls-parser = { version = "0.11", optional = true }
der-parser = { version = "9.0", optional = true }
# [EXPERT MODE] FORCE CPU INFERENCE
# We disable "default-features" to kill GPU checks.
# We enable "load-dynamic" to use the portable onnxruntime.dll.
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray = "0.16"
netstat2 = "0.11.2"
pelite = "0.10.0"
# psutil = "3.3"  # Removed due to compilation errors, using sysinfo instead

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "jobapi2", "winnt", "handleapi", "winbase", "securitybaseapi", "synchapi"] }
windows = { version = "0.52", features = [
    "Win32_Security_Cryptography", 
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Diagnostics_ProcessSnapshotting",
    "Win32_System_WindowsProgramming",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_Services",
    "Win32_System_Console",
    "Win32_System_Time",
    "Win32_Storage_Vss",
    "Win32_System_IO",
    "Win32_System_RestartManager",
] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Process management for autonomous response
kill_tree = "0.2"
which = "4.4"

# Network utilities for quarantine functionality
ipnet = "2.9"
cidr = "0.2"

# Advanced pattern matching and real-time analysis
aho-corasick = "1.1"
memchr = "2.7"
bitflags = "2.4"
byteorder = "1.5"

# Advanced EDR Capabilities - Disassembly Engine
# capstone = { version = "0.11", optional = true }
capstone-sys = { version = "0.15", optional = true }

# Advanced EDR Capabilities - AI Integration (Moved to main dependencies)

# Advanced EDR Capabilities - Enhanced Network Analysis
etherparse = { version = "0.14", optional = true }
tls-parser = { version = "0.11", optional = true }
der-parser = { version = "9.0", optional = true }

# Advanced EDR Capabilities - Performance & Caching (already present but ensuring availability)
# dashmap = "5.5" - already present
# lru = "0.12" - already present
# rayon = "1.8" - already present

# Memory analysis and forensics
# goblin is declared above
pe-parser = "0.7.0"
elf = { version = "0.7", optional = true }

# Advanced networking and protocol analysis
tokio-util = { version = "0.7", features = ["codec"] }
network-interface = { version = "1.1", optional = true }
rawsock = { version = "0.2", optional = true }

# Graph Theory
petgraph = "0.6"

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"
bindgen = "0.69"
chrono = "0.4"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }

[features]
# Removed duplicate default feature definition
basic-detection = []
advanced-logging = ["tracing-subscriber"]
behavioral-analysis = ["api-hooking"]
api-hooking = []
memory-forensics = ["behavioral-analysis", "goblin", "elf"]
advanced-detection = ["behavioral-analysis", "network-monitoring", "yara", "api-hooking", "performance-optimization", "memory-forensics"]
automated-response = []
network-monitoring = ["pcap", "dns-lookup", "trust-dns-resolver", "network-interface", "rawsock", "x509-parser"]
metrics = ["prometheus"]
yara = []
telemetry = ["prometheus", "opentelemetry", "opentelemetry-prometheus"]
advanced-reporting = []
enhanced-rules = []  # Feature flag for enhanced rules testing
rules-testing = ["yara"]  # Feature flag for rules testing assertions
testing = ["tokio-test", "serial_test"]  # Feature flag for testing utilities
comprehensive-testing = ["testing", "proptest", "mockall", "criterion"]  # Comprehensive test suite with property testing and mocking
benchmarking = ["criterion"]  # Performance benchmarking capabilities
performance-optimization = ["crossbeam", "parking_lot"]  # Advanced performance optimizations with SIMD and multi-threading
instrumentation = ["console-subscriber", "parking_lot/deadlock_detection"]  # Task monitoring and deadlock detection
validation-framework = []  # Feature flag for malware validation and false positive testing
production-yara = ["yara"]  # Feature flag for production YARA integration
malware-testing = ["validation-framework"]  # Feature flag for malware sample testing
false-positive-testing = ["validation-framework"]  # Feature flag for false positive validation
enterprise_validation = ["testing", "behavioral-analysis", "network-monitoring", "yara", "metrics", "validation-framework", "production-yara", "malware-testing", "false-positive-testing"]  # Enterprise validation with real malware and production workloads
# multi-agent = ["tonic", "tonic-build", "kafka", "redis"]  # Temporarily disabled
security-hardening = []
windows-service = ["dep:windows-service"]
identity-hardening = ["widestring"]
endpoint-hardening = ["widestring"]
metrics_cli = ["dep:reqwest"]

# Production configurations
production = [
    "basic-detection",
    "advanced-logging",
    "yara",
    "metrics",
    "validation-framework",
    "production-yara",
    "malware-testing",
    "false-positive-testing",
    "behavioral-analysis",
    "network-monitoring",
    "performance-optimization",
    "security-hardening",
    "dep:reqwest"
]

# Development and testing
dev-tools = ["instrumentation"]
cross-compile = []

# Advanced EDR Feature Flags
advanced-disassembly = ["capstone-sys", "goblin", "elf"]
ai-integration = ["dep:reqwest"]
enhanced-pcap = ["pcap", "etherparse", "tls-parser", "der-parser", "x509-parser"]
super-yara = ["advanced-disassembly", "ai-integration", "enhanced-pcap"]
advanced-edr = ["advanced-disassembly", "ai-integration", "enhanced-pcap", "super-yara"]

# Default features need reqwest for existing functionality
default = ["basic-detection", "metrics", "yara", "validation-framework", "advanced-logging", "behavioral-analysis", "automated-response", "memory-forensics", "dep:reqwest"]


[[bin]]
name = "ipc_client"
path = "src/bin/ipc_client.rs"



[[bin]]
name = "test_dashboard_client"
path = "test_dashboard_client.rs"
required-features = []

[[bin]]
name = "simple_ipc_test"
path = "src/bin/simple_ipc_test.rs"

[[bin]]
name = "test_alert_delivery"
path = "src/bin/test_alert_delivery.rs"

[[bin]]
name = "comprehensive_alert_test"
path = "src/bin/comprehensive_alert_test.rs"

[[bin]]
name = "test_key"
path = "src/bin/test_key.rs"

[[bin]]
name = "test_yara_updater"
path = "src/bin/test_yara_updater.rs"
required-features = ["yara"]

[[bin]]
name = "test_scan_file_integration"
path = "src/bin/test_scan_file_integration.rs"
required-features = ["network-monitoring"]

[[bin]]
name = "test_signature"
path = "src/bin/test_signature.rs"

[[bin]]
name = "debug_key"
path = "src/bin/debug_key.rs"

[[bin]]
name = "debug_signature_sync"
path = "src/bin/debug_signature_sync.rs"

# [[bin]]
# name = "debug_live_signature"
# path = "debug_live_signature.rs"

[[bin]]
name = "metrics_report"
path = "src/bin/metrics_report.rs"
required-features = ["metrics_cli"]

[[bin]]
name = "threat_simulator"
path = "src/bin/threat_simulator.rs"

[[bin]]
name = "threat_sim"
path = "src/bin/threat_sim.rs"

[[bin]]
name = "wannacry_crypto_sim"
path = "src/bin/wannacry_crypto_sim.rs"

[[bin]]
name = "notpetya_locker_sim"
path = "src/bin/notpetya_locker_sim.rs"

[[bin]]
name = "darkside_doxware_sim"
path = "src/bin/darkside_doxware_sim.rs"

[[bin]]
name = "lockbit_double_ext_sim"
path = "src/bin/lockbit_double_ext_sim.rs"

[[bin]]
name = "revil_raas_sim"
path = "src/bin/revil_raas_sim.rs"

[[bin]]
name = "smoke_scan_cli"
path = "src/bin/smoke_scan_cli.rs"

[dev-dependencies]
tokio-test = "0.4"
temp-env = "0.3"
tempfile = "3.8"
tracing-test = "0.2"
tempdir = "0.3"
regex = "1.10"
hex = "0.4"
env_logger = "0.10"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"
serial_test = "3.0"

# Enable required features for tests and benchmarks
[package.metadata.cargo-all-features]
skip_optional_dependencies = true

# Test configuration - enable testing and telemetry features for tests
[lib]
test = true
bench = true
required-features = ["testing", "telemetry", "behavioral-analysis", "yara"]

# Enable required features for all test files
[[test]]
name = "startup_smoke_tests"
path = "tests/startup_smoke_tests.rs"
required-features = ["testing", "telemetry", "behavioral-analysis", "yara"]

[[test]]
name = "acceptance_tests"
path = "tests/acceptance_tests.rs"
required-features = ["testing", "telemetry", "behavioral-analysis", "yara"]

[[test]]
name = "false_positive"
path = "tests/false_positive.rs"
required-features = ["testing", "telemetry", "behavioral-analysis", "yara"]

[[test]]
name = "enterprise_validation"
path = "tests/enterprise_validation.rs"
required-features = ["testing", "telemetry", "behavioral-analysis", "yara"]

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["comprehensive-testing", "behavioral-analysis", "network-monitoring", "api-hooking", "yara", "advanced-detection"]

[[test]]
name = "performance_gates_tests"
path = "tests/performance_gates_tests.rs"
required-features = ["testing", "telemetry", "behavioral-analysis", "yara", "metrics"]

# Isolation engine tests - run single-threaded to prevent hangs
[[test]]
name = "isolation_engine_tests"
path = "tests/isolation_engine_tests.rs"
required-features = ["testing", "instrumentation", "validation-framework"]

[[bench]]
name = "ipc_benchmarks"
harness = false
required-features = ["testing", "telemetry", "behavioral-analysis", "yara"]

[profile.release]
lto = false
codegen-units = 16
panic = "abort"
incremental = false
debug = false
opt-level = 2
